--- a/thesis.tex
+++ b/thesis.tex
@@ -1,11 +1,10 @@
 \documentclass[british,titlepage]{ntnuthesis}
 
-\title{An NTNU Thesis \LaTeX{} Document Class}
-\shorttitle{An NTNU Thesis Document Class}
-\author{Community of Practice in Computer Science Education at NTNU}
-\shortauthor{CoPCSE$@$NTNU}
-\date{CC-BY \ntnuthesisdate}
-
+\title{Master Document}
+\shorttitle{Master}
+\author{Katrine Lie Holm}
+\shortauthor{K. L. Holm}
+\date{\today{}}
 \addbibresource{thesis.bib}
 
 \input{glossary.tex} % add glossary and acronym lists before document
@@ -23,10 +22,15 @@
 \printglossary[type=\acronymtype] % Print acronyms
 \printglossary                    % Print glossary
 
-\input{chapters/1-introduction}
-\input{chapters/2-usage.tex}
-\input{chapters/3-structure.tex}
-\input{chapters/4-conclusion.tex}
+\input{chapters/1-intro}
+\input{chapters/2-background.tex}
+\input{chapters/3-related}
+\input{chapters/4-setup}
+\input{chapters/5-method}
+\input{chapters/7-discussion}
+\input{chapters/8-conclusion}
+
+
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
