--- a/thesis.bib
+++ b/thesis.bib
@@ -1,20 +1,826 @@
-@article{claerbout1991scrutiny,
-  title={A Scrutiny of the Introduction},
-  author={Claerbout, Jon F},
-  journal={The Leading Edge},
-  volume={10},
-  number={1},
-  pages={39--41},
-  year={1991},
-  publisher={Society of Exploration Geophysicists}
+
+@report{0-SimilarityMeasures,
+  type = {Report},
+  title = {Similarity {{Measures}} for {{Trajectory Data}}},
+  author = {Holm, Katrine Lie},
+  date = {2021},
+  institution = {{Norwegian University of Science and Technology}}
 }
 
-@article{landes1951scrutiny,
-  title={A Scrutiny of the Abstract},
-  author={Landes, Kenneth K},
-  journal={Bulletin of the American Association of Petroleum Geologists},
-  volume={35},
-  number={7},
-  pages={1660},
-  year={1951}
+
+@inproceedings{1-ParameterfreeData,
+  title = {Towards Parameter-Free Data Mining},
+  booktitle = {Proceedings of the 2004 {{ACM SIGKDD}} International Conference on {{Knowledge}} Discovery and Data Mining  - {{KDD}} '04},
+  author = {Keogh, Eamonn and Lonardi, Stefano and Ratanamahatana, Chotirat Ann},
+  date = {2004},
+  pages = {206},
+  publisher = {{ACM Press}},
+  doi = {10.1145/1014052.1014077},
+  eventtitle = {The 2004 {{ACM SIGKDD}} International Conference}
 }
+
+@article{10-UsingDynamic,
+  title = {Using {{Dynamic Time Warping}} to {{Find Patterns}} in {{Time Series}}},
+  author = {Berndt, Donald J and Clifford, James},
+  pages = {12}
+}
+
+@inproceedings{12-RobustFast,
+  title = {Robust and Fast Similarity Search for Moving Object Trajectories},
+  booktitle = {Proceedings of the 2005 {{ACM SIGMOD}} International Conference on {{Management}} of Data  - {{SIGMOD}} '05},
+  author = {Chen, Lei and Özsu, M. Tamer and Oria, Vincent},
+  date = {2005},
+  pages = {491},
+  publisher = {{ACM Press}},
+  doi = {10.1145/1066157.1066213},
+  eventtitle = {The 2005 {{ACM SIGMOD}} International Conference},
+  isbn = {978-1-59593-060-6}
+}
+
+@article{13-MarriageLpnorms,
+  title = {On {{The Marriage}} of {{Lp-norms}} and {{Edit Distance}}},
+  author = {Chen, Lei and Ng, Raymond},
+  date = {2004},
+  pages = {12}
+}
+
+@article{14-EfficientAlgorithm,
+  title = {An {{Efficient Algorithm}} for {{Calculating}} the {{Exact Hausdorff Distance}}},
+  author = {Taha, Abdel Aziz and Hanbury, Allan},
+  date = {2015-11},
+  journaltitle = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume = {37},
+  number = {11},
+  pages = {2153--2163},
+  issn = {1939-3539},
+  doi = {10.1109/TPAMI.2015.2408351}
+}
+
+@incollection{15-BasicConcepts,
+  title = {Basic {{Concepts}} of {{Movement Data}}},
+  booktitle = {Mobility, {{Data Mining}} and {{Privacy}}: {{Geographic Knowledge Discovery}}},
+  author = {Andrienko, N. and Andrienko, G. and Pelekis, N. and Spaccapietra, S.},
+  editor = {Giannotti, Fosca and Pedreschi, Dino},
+  date = {2008},
+  pages = {15--38},
+  publisher = {{Springer}},
+  url = {https://doi.org/10.1007/978-3-540-75177-9_2},
+  urldate = {2021-10-04},
+  isbn = {978-3-540-75177-9}
+}
+
+@incollection{16-SimilarityQueries,
+  title = {On Similarity Queries for Time-Series Data: {{Constraint}} Specification and Implementation},
+  booktitle = {Principles and {{Practice}} of {{Constraint Programming}} — {{CP}} '95},
+  author = {Goldin, Dina Q. and Kanellakis, Paris C.},
+  editor = {Montanari, Ugo and Rossi, Francesca},
+  date = {1995},
+  volume = {976},
+  pages = {137--153},
+  publisher = {{Springer Berlin Heidelberg}},
+  url = {http://link.springer.com/10.1007/3-540-60299-2_9},
+  urldate = {2021-10-04},
+  editorb = {Goos, Gerhard and Hartmanis, Juris and Leeuwen, Jan},
+  editorbtype = {redactor},
+  isbn = {978-3-540-60299-6 978-3-540-44788-7}
+}
+
+@article{17-TrajectorySimilarity,
+  title = {Trajectory Similarity Measures},
+  author = {Toohey, Kevin and Duckham, Matt},
+  date = {2015-05-20},
+  journaltitle = {SIGSPATIAL Special},
+  volume = {7},
+  number = {1},
+  pages = {43--50},
+  issn = {1946-7729},
+  doi = {10.1145/2782759.2782767}
+}
+
+@article{19-ClusterAnalysis,
+  title = {Cluster Analysis on Time Series Gene Expression Data},
+  author = {Kuo, Huang-Cheng and Lee, Tsung-Lung and Huang, Jen-Peng},
+  date = {2010-01-01},
+  journaltitle = {IJBIDM},
+  volume = {5},
+  pages = {56--76},
+  doi = {10.1504/IJBIDM.2010.030299}
+}
+
+@online{20-SimilarityDissimilarity,
+  title = {Similarity and {{Dissimilarity}}},
+  author = {Rhodes, Loren K.},
+  url = {http://jcsites.juniata.edu/faculty/rhodes/ml/simdissim.htm},
+  urldate = {2021-10-12},
+  date = {2021-07-23},
+
+}
+
+@article{21-DistributedTrajectory,
+  title = {Distributed Trajectory Similarity Search},
+  author = {Xie, Dong and Li, Feifei and Phillips, Jeff M.},
+  date = {2017-08-01},
+  journaltitle = {Proceedings of the VLDB Endowment},
+  volume = {10},
+  number = {11},
+  pages = {1478--1489},
+  issn = {2150-8097},
+  doi = {10.14778/3137628.3137655}
+}
+
+@inproceedings{23-DiscoveringSimilar,
+  title = {Discovering Similar Multidimensional Trajectories},
+  booktitle = {Proceedings 18th {{International Conference}} on {{Data Engineering}}},
+  author = {Vlachos, M. and Kollios, G. and Gunopulos, D.},
+  date = {2002-02},
+  pages = {673--684},
+  doi = {10.1109/ICDE.2002.994784},
+  eventtitle = {Proceedings 18th {{International Conference}} on {{Data Engineering}}}
+}
+
+@inproceedings{24-ReviewTrajectory,
+  title = {Review on Trajectory Similarity Measures},
+  booktitle = {2015 {{IEEE Seventh International Conference}} on {{Intelligent Computing}} and {{Information Systems}} ({{ICICIS}})},
+  author = {Magdy, Nehal and Sakr, Mahmoud A. and Mostafa, Tamer and El-Bahnasy, Khaled},
+  date = {2015-12},
+  pages = {613--619},
+  doi = {10.1109/IntelCIS.2015.7397286},
+  eventtitle = {2015 {{IEEE Seventh International Conference}} on {{Intelligent Computing}} and {{Information Systems}} ({{ICICIS}})}
+}
+
+@article{25-ComparingCombining,
+  title = {Comparing and {{Combining Time Series Trajectories Using Dynamic Time Warping}}},
+  author = {Vaughan, Neil and Gabrys, Bogdan},
+  date = {2016-01-01},
+  journaltitle = {Procedia Computer Science},
+  series = {Knowledge-{{Based}} and {{Intelligent Information}} \& {{Engineering Systems}}: {{Proceedings}} of the 20th {{International Conference KES-2016}}},
+  volume = {96},
+  pages = {465--474},
+  issn = {1877-0509},
+  doi = {10.1016/j.procs.2016.08.106}
+}
+
+@article{26-QueryingMining,
+  title = {Querying and Mining of Time Series Data: {{Experimental}} Comparison of Representations and Distance Measures},
+  author = {Ding, Hui and Trajcevski, Goce and Scheuermann, Peter and Wang, Xiaoyue and Keogh, Eamonn},
+  date = {2008-08-01},
+  journaltitle = {PVLDB},
+  volume = {1},
+  pages = {1542--1552}
+}
+
+@incollection{27-DynamicTime,
+  title = {Dynamic {{Time Warping}}},
+  booktitle = {Information {{Retrieval}} for {{Music}} and {{Motion}}},
+  editor = {Müller, Meinard},
+  date = {2007},
+  pages = {69--84},
+  publisher = {{Springer}},
+  url = {https://doi.org/10.1007/978-3-540-74048-3_4},
+  urldate = {2021-10-13},
+  isbn = {978-3-540-74048-3}
+}
+
+@online{28-Measure,
+  type = {Text},
+  title = {Measure},
+  author = {Weisstein, Eric W. and Cortzen, Allan},
+  date = {2016},
+  url = {https://mathworld.wolfram.com/Measure.html},
+  urldate = {2021-10-13},
+  organization = {{mathworld - wolfram}}
+}
+
+@inreference{29-MeasureMathematics,
+  title = {Measure (Mathematics)},
+  booktitle = {Wikipedia},
+  author = {Wikipedia Contributors},
+  options = {useprefix=true},
+  date = {2021-10-08T03:03:26Z},
+  url = {https://en.wikipedia.org/w/index.php?title=Measure_(mathematics)&oldid=1048807597},
+  urldate = {2021-10-13}
+}
+
+@online{3-TaxiTrajectory,
+  title = {Taxi {{Trajectory Data}}},
+  author = {Cross, Chris},
+  url = {https://kaggle.com/crailtap/taxi-trajectory},
+  urldate = {2021-08-30}
+}
+
+@online{30-Metric,
+  type = {Text},
+  title = {Metric},
+  date = {2021},
+  author = {Weisstein, Eric W.},
+  publisher = {{Wolfram Research, Inc.}},
+  url = {https://mathworld.wolfram.com/Metric.html},
+  urldate = {2021-10-14}
+}
+
+@article{31-ShapebasedSimilarity,
+  title = {A Shape-Based Similarity Measure for Time Series Data with Ensemble Learning},
+  author = {Nakamura, Tetsuya and Taki, Keishi and Nomiya, Hiroki and Seki, Kazuhiro and Uehara, Kuniaki},
+  date = {2013-11},
+  journaltitle = {Pattern Analysis and Applications},
+  volume = {16},
+  number = {4},
+  pages = {535--548},
+  issn = {1433-7541, 1433-755X},
+  doi = {10.1007/s10044-011-0262-6}
+}
+
+@inproceedings{32-SimilaritySearch,
+  title = {Similarity {{Search}} in {{Trajectory Databases}}},
+  booktitle = {14th {{International Symposium}} on {{Temporal Representation}} and {{Reasoning}} ({{TIME}}'07)},
+  author = {Pelekis, Nikos and Kopanakis, Ioannis and Marketos, Gerasimos and Ntoutsi, Irene and Andrienko, Gennady and Theodoridis, Yannis},
+  date = {2007-06},
+  pages = {129--140},
+  issn = {1530-1311},
+  doi = {10.1109/TIME.2007.59},
+  eventtitle = {14th {{International Symposium}} on {{Temporal Representation}} and {{Reasoning}} ({{TIME}}'07)}
+}
+
+@article{33-TimeSeries,
+  title = {Time {{Series Matching}}: A {{Multi-ﬁlter Approach}}},
+  author = {Wang, Zhihua},
+  pages = {109}
+}
+
+@inproceedings{36-SimilarityMetric,
+  title = {Similarity {{Metric}} for {{Curved Shapes}} in {{Euclidean Space}}},
+  booktitle = {2016 {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
+  author = {Demisse, Girum G. and Aouada, Djamila and Ottersten, Bjorn},
+  date = {2016-06},
+  pages = {5042--5050},
+  publisher = {{IEEE}},
+  doi = {10.1109/CVPR.2016.545},
+  eventtitle = {2016 {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
+  isbn = {978-1-4673-8851-1}
+}
+
+@article{4-ElasticPartial,
+  title = {An Elastic Partial Shape Matching Technique},
+  author = {Latecki, Longin Jan and Megalooikonomou, Vasileios and Wang, Qiang and Yu, Deguang},
+  date = {2007-11-01},
+  journaltitle = {Pattern Recognition},
+  volume = {40},
+  number = {11},
+  pages = {3069--3080},
+  issn = {0031-3203},
+  doi = {10.1016/j.patcog.2007.03.004}
+}
+
+@article{40-MoveSplitMergeMetric,
+  title = {The {{Move-Split-Merge Metric}} for {{Time Series}}},
+  author = {Stefan, A. and Athitsos, V. and Das, Gautam},
+  date = {2012},
+  journaltitle = {IEEE Transactions on Knowledge and Data Engineering},
+  doi = {10.1109/TKDE.2012.88}
+}
+
+@article{41-EvaluatingDistance,
+  title = {Evaluating Distance Measures for Trajectories in the Mobile Setting},
+  author = {Larios, Nikolaos and Mitatakis, Christos and Kalogeraki, Vana and Gunopulos, Dimitrios},
+  pages = {9}
+}
+
+@online{42-GreatTime,
+  title = {The {{Great Time Series Classification Bake Off}}: {{An Experimental Evaluation}} of {{Recently Proposed Algorithms}}. {{Extended Version}}},
+  author = {Bagnall, Anthony and Bostrom, Aaron and Large, James and Lines, Jason},
+  date = {2016-02-04},
+  eprint = {1602.01711},
+  url = {http://arxiv.org/abs/1602.01711},
+  urldate = {2021-11-02},
+  archiveprefix = {arXiv}
+}
+
+@software{43-TrajectoryDistance,
+  title = {Trajectory\_distance},
+  author = {Guillouet, Brendan},
+  date = {2021-11-05T08:00:59Z},
+  origdate = {2018-02-12T20:16:43Z},
+  url = {https://github.com/bguillouet/traj-dist},
+  urldate = {2021-11-08}
+}
+
+@misc{44-FastSubsequence,
+  title = {Fast {{Subsequence Matching}} in {{Time-Series Databases}}},
+  author = {Faloutsos, Christos and Ranganathan, M. and Manolopoulos, Yannis},
+  date = {1994}
+}
+
+@book{45-CrosswordsReference,
+  title = {Cross-Words Reference Template for {{DTW-based}} Speech Recognition Systems},
+  author = {Abdulla, Waleed and Chow, D. and Sin, G.},
+  date = {2003-11-15},
+  pages = {1579 Vol.4},
+  doi = {10.1109/TENCON.2003.1273186},
+  isbn = {978-0-7803-8162-9},
+  pagetotal = {1576}
+}
+
+@article{46-PatternTrajectory,
+  title = {Pattern {{Trajectory Analysis}} of {{Nonstationary Multivariate Data}}},
+  author = {Sanderson, Arthur C. and Wong, Andrew K. C.},
+  date = {1980-07},
+  journaltitle = {IEEE Transactions on Systems, Man, and Cybernetics},
+  volume = {10},
+  number = {7},
+  pages = {384--392},
+  issn = {2168-2909},
+  doi = {10.1109/TSMC.1980.4308519}
+}
+
+@article{47-ClassificationNonmetric,
+  title = {Classification with Nonmetric Distances: Image Retrieval and Class Representation},
+  author = {Jacobs, D.W. and Weinshall, D. and Gdalyahu, Y.},
+  date = {2000-06},
+  journaltitle = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume = {22},
+  number = {6},
+  pages = {583--600},
+  issn = {01628828},
+  doi = {10.1109/34.862197}
+}
+
+@incollection{48-ComputationalGeometrya,
+  title = {The {{Computational Geometry}} of {{Comparing Shapes}}},
+  booktitle = {Efficient {{Algorithms}}: {{Essays Dedicated}} to {{Kurt Mehlhorn}} on the {{Occasion}} of {{His}} 60th {{Birthday}}},
+  author = {Alt, Helmut},
+  editor = {Albers, Susanne and Alt, Helmut and Näher, Stefan},
+  date = {2009},
+  series = {Lecture {{Notes}} in {{Computer Science}}},
+  pages = {235--248},
+  publisher = {{Springer}},
+  doi = {10.1007/978-3-642-03456-5_16},
+  isbn = {978-3-642-03456-5}
+}
+
+@online{49-HausdorffDistance,
+  title = {Hausdorff Distance},
+  author = {Grégoire, Normand and Bouillot, Mikael},
+  date = {1998-23},
+  url = {http://cgm.cs.mcgill.ca/~godfried/teaching/cg-projects/98/normand/main.html},
+  urldate = {2021-11-23},
+  organization = {{Hausdorff distance between convex polygons}}
+}
+
+@article{5-ComputingVisualizing,
+  title = {Computing and {{Visualizing Dynamic Time Warping Alignments}} in {{{\emph{R}}}} : {{The}} {\textbf{Dtw}} {{Package}}},
+  author = {Giorgino, Toni},
+  date = {2009},
+  journaltitle = {Journal of Statistical Software},
+  volume = {31},
+  number = {7},
+  issn = {1548-7660},
+  doi = {10.18637/jss.v031.i07}
+}
+
+@article{50-ReviewPerspective,
+  title = {Review \& {{Perspective}} for {{Distance Based Trajectory Clustering}}},
+  author = {Besse, Philippe and Guillouet, Brendan and Loubes, Jean-Michel and Royer, Francois},
+  date = {2015-08-17}
+}
+
+@article{51-HausdorffDistance,
+  title = {Hausdorff {{Distance}} with {{Outliers}} and {{Noise Resilience Capabilities}}},
+  author = {Maiseli, Baraka Jacob},
+  date = {2021-06-26},
+  journaltitle = {SN Computer Science},
+  volume = {2},
+  number = {5},
+  pages = {358},
+  issn = {2661-8907},
+  doi = {10.1007/s42979-021-00737-y}
+}
+
+@article{52-OnlineEfficient,
+  title = {Online {{Efficient And Effective Search In Large And Noisy Sequence Databases}}},
+  author = {Kotsifakos, Alexios},
+  date = {2014},
+  journaltitle = {undefined},
+  url = {https://www.semanticscholar.org/paper/Online-Efficient-And-Effective-Search-In-Large-And-Kotsifakos/21c3db65abf7cef992abd1b862326845411f8e0e},
+  urldate = {2021-11-30}
+}
+
+@inproceedings{53-TimeSeries,
+  title = {Time {{Series}} Classification through Transformation and Ensembles},
+  author = {Lines, Jason},
+  date = {2015}
+}
+
+@article{54-IndexdrivenSimilarity,
+  title = {Index-Driven Similarity Search in Metric Spaces ({{Survey Article}})},
+  author = {Hjaltason, Gisli R. and Samet, Hanan},
+  date = {2003-12-01},
+  journaltitle = {ACM Transactions on Database Systems},
+  volume = {28},
+  number = {4},
+  pages = {517--580},
+  issn = {0362-5915},
+  doi = {10.1145/958942.958948}
+}
+
+@inproceedings{55-EfficientAccurate,
+  title = {An Efficient and Accurate Method for Evaluating Time Series Similarity},
+  booktitle = {Proceedings of the 2007 {{ACM SIGMOD}} International Conference on {{Management}} of Data},
+  author = {Morse, Michael D. and Patel, Jignesh M.},
+  date = {2007-06-11},
+  series = {{{SIGMOD}} '07},
+  pages = {569--580},
+  publisher = {{Association for Computing Machinery}},
+  doi = {10.1145/1247480.1247544},
+  isbn = {978-1-59593-686-8}
+}
+
+@article{56-GreatTime,
+  title = {The Great Time Series Classification Bake off: A Review and Experimental Evaluation of Recent Algorithmic Advances},
+  author = {Bagnall, Anthony and Lines, Jason and Bostrom, Aaron and Large, James and Keogh, Eamonn},
+  date = {2017-05-01},
+  journaltitle = {Data Mining and Knowledge Discovery},
+  volume = {31},
+  number = {3},
+  pages = {606--660},
+  issn = {1573-756X},
+  doi = {10.1007/s10618-016-0483-9}
+}
+
+@online{57-TreeAlgorithms,
+  title = {Tree Algorithms Explained: {{Ball Tree Algorithm}} vs. {{KD Tree}} vs. {{Brute Force}}},
+  author = {Marius, Hucker},
+  date = {2021-09-24T06:03:59},
+  url = {https://towardsdatascience.com/tree-algorithms-explained-ball-tree-algorithm-vs-kd-tree-vs-brute-force-9746debcd940},
+  urldate = {2021-12-01},
+  organization = {{Medium}}
+}
+
+@online{58-UCRTime,
+  title = {The {{UCR Time Series Archive}}},
+  author = {Dau, Hoang Anh and Bagnall, Anthony and Kamgar, Kaveh and Yeh, Chin-Chia Michael and Zhu, Yan and Gharghabi, Shaghayegh and Ratanamahatana, Chotirat Ann and Keogh, Eamonn},
+  date = {2019-09-08},
+  eprint = {1810.07758},
+  url = {http://arxiv.org/abs/1810.07758},
+  urldate = {2021-12-01},
+  archiveprefix = {arXiv}
+}
+
+@article{59-FastAccurate,
+  title = {Fast and {{Accurate Time-Series Clustering}}},
+  author = {Paparrizos, John and Gravano, Luis},
+  date = {2017-06-01},
+  journaltitle = {ACM Transactions on Database Systems},
+  volume = {42},
+  number = {2},
+  pages = {8:1--8:49},
+  issn = {0362-5915},
+  doi = {10.1145/3044711}
+}
+
+@article{60-ClusteringPassing,
+  title = {Clustering by {{Passing Messages Between Data Points}}},
+  author = {Frey, Brendan J. and Dueck, Delbert},
+  date = {2007-02-16},
+  journaltitle = {Science},
+  volume = {315},
+  number = {5814},
+  pages = {972--976},
+  doi = {10.1126/science.1136800}
+}
+
+@article{61-ConstructingAffinity,
+  title = {Constructing Affinity Matrix in Spectral Clustering Based on Neighbor Propagation},
+  author = {Li, Xin-Ye and Guo, Li-jie},
+  date = {2012-11-15},
+  journaltitle = {Neurocomputing},
+  volume = {97},
+  pages = {125--130},
+  issn = {0925-2312},
+  doi = {10.1016/j.neucom.2012.06.023}
+}
+
+@online{62-ClusteringAlgorithms,
+  title = {Clustering {{Algorithms}}: {{From Start To State Of The Art}}},
+  url = {https://www.toptal.com/machine-learning/clustering-algorithms},
+  urldate = {2021-12-03},
+  organization = {{Toptal Engineering Blog}}
+}
+
+@online{63-HowCalculate,
+  title = {How to Calculate {{2D}} Standard Deviation, with 0 Mean, Bounded by Limits},
+  author = {Various Contributes},
+  url = {https://stats.stackexchange.com/questions/65640/how-to-calculate-2d-standard-deviation-with-0-mean-bounded-by-limits},
+  urldate = {2021-12-03},
+  organization = {{Cross Validated}}
+}
+
+@article{64-WhyMany,
+  title = {Why so Many Clustering Algorithms: A Position Paper},
+  author = {Estivill-Castro, Vladimir},
+  date = {2002-06-01},
+  journaltitle = {ACM SIGKDD Explorations Newsletter},
+  volume = {4},
+  number = {1},
+  pages = {65--75},
+  issn = {1931-0145},
+  doi = {10.1145/568574.568575}
+}
+
+@article{66-ClusterSeparation,
+  title = {A {{Cluster Separation Measure}}},
+  author = {Davies, David L. and Bouldin, Donald W.},
+  date = {1979-04},
+  journaltitle = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume = {PAMI-1},
+  number = {2},
+  pages = {224--227},
+  issn = {1939-3539},
+  doi = {10.1109/TPAMI.1979.4766909}
+}
+
+@online{67-Clustering,
+  title = {2.3. {{Clustering}}},
+  author = {Scikit-Learn},
+  url = {https://scikit-learn/stable/modules/clustering.html},
+  urldate = {2021-12-09},
+  organization = {{scikit-learn}}
+}
+
+@article{68-FastAccurate,
+  title = {Fast and Accurate Group Outlier Detection for Trajectory Data},
+  author = {Djenouri, Youcef and Nørvåg, Kjetil and Ramampiaro, Heri and Lin, Jerry Chun-Wei},
+  date = {2020},
+  journaltitle = {60-70},
+  issn = {1865-0929},
+  doi = {10.1007/978-3-030-54623-6_6}
+}
+
+@incollection{69-MiningSpatial,
+  title = {Mining {{Spatial Data}}},
+  booktitle = {Data {{Mining}}: {{The Textbook}}},
+  author = {Aggarwal, Charu C.},
+  editor = {Aggarwal, Charu C.},
+  date = {2015},
+  pages = {531--555},
+  publisher = {{Springer International Publishing}},
+  url = {https://doi.org/10.1007/978-3-319-14142-8_16},
+  urldate = {2021-12-15},
+  isbn = {978-3-319-14142-8}
+}
+
+@incollection{70-SimilarityDistances,
+  title = {Similarity and {{Distances}}},
+  booktitle = {Data {{Mining}}: {{The Textbook}}},
+  author = {Aggarwal, Charu C.},
+  editor = {Aggarwal, Charu C.},
+  date = {2015},
+  pages = {63--91},
+  publisher = {{Springer International Publishing}},
+  url = {https://doi.org/10.1007/978-3-319-14142-8_3},
+  urldate = {2021-12-16},
+  isbn = {978-3-319-14142-8}
+}
+
+@online{71-IntroductionDynamica,
+  title = {An Introduction to {{Dynamic Time Warping}}},
+  author = {{Romain Tavenard}},
+  url = {https://rtavenar.github.io/blog/dtw.html},
+  urldate = {2021-12-17}
+}
+
+@online{72-GoogleColaboratory,
+  title = {Google {{Colaboratory}}},
+  author = {{Google}},
+  url = {https://colab.research.google.com/},
+  urldate = {2021-12-17}
+}
+
+@online{73-ProjectJupyter,
+  title = {Project {{Jupyter}}},
+  url = {https://www.jupyter.org},
+  urldate = {2021-12-17}
+}
+
+@online{74-WelcomePython,
+  title = {Welcome to {{Python}}.Org},
+  url = {https://www.python.org/},
+  urldate = {2021-12-17},
+  organization = {{Python.org}}
+}
+
+@article{75-CythonBest,
+  title = {Cython: {{The Best}} of {{Both Worlds}}},
+  author = {Behnel, Stefan and Bradshaw, Robert and Citro, Craig and Dalcin, Lisandro and Seljebotn, Dag Sverre and Smith, Kurt},
+  date = {2011-03},
+  journaltitle = {Computing in Science \& Engineering},
+  volume = {13},
+  number = {2},
+  pages = {31--39},
+  issn = {1521-9615},
+  doi = {10.1109/MCSE.2010.118}
+}
+
+@online{76-WhyHow,
+  title = {Why, {{How}} and {{When}} to {{Scale}} Your {{Features}} | by {{Sudharsan Asaithambi}} | {{GreyAtom}} | {{Medium}}},
+  url = {https://medium.com/greyatom/why-how-and-when-to-scale-your-features-4b30ab09db5e},
+  urldate = {2021-12-27}
+}
+
+@online{77-FeatureScaling,
+  title = {Feature {{Scaling- Why}} It Is Required?},
+  author = {Blog, Rahul's},
+  date = {2019-10-23T09:20:57},
+  url = {https://rahul-saini.medium.com/feature-scaling-why-it-is-required-8a93df1af310},
+  urldate = {2021-12-27},
+  organization = {{Medium}}
+}
+
+@online{78-Lesson10,
+  title = {Lesson 10: {{Clustering}}},
+  author = {{The Pennsylvania State University}},
+  date = {2018},
+  url = {https://online.stat.psu.edu/stat555/print/book/export/html/11/},
+  urldate = {2022-01-11}
+}
+
+@online{79-SilhouetteAnalysis,
+  title = {Silhouette {{Analysis}} vs {{Elbow Method}} vs {{Davies-Bouldin Index}}: {{Selecting}} the Optimal Number of Clusters for {{KMeans}} Clustering},
+  author = {Drakos, Georgios},
+  date = {2020-03-04T09:00:00},
+  url = {https://gdcoder.com/silhouette-analysis-vs-elbow-method-vs-davies-bouldin-index-selecting-the-optimal-number-of-clusters-for-kmeans-clustering/},
+  urldate = {2022-01-11},
+  organization = {{GDCoder}}
+}
+
+@article{8-EffectivenessStudy,
+  title = {An {{Eﬀectiveness Study}} on {{Trajectory Similarity Measures}}},
+  author = {Wang, Haozhou and Su, Han and Zheng, Kai and Sadiq, Shazia and Zhou, Xiaofang},
+  date = {2013},
+  journaltitle = {Database Technologies},
+  volume = {137},
+  pages = {10}
+}
+
+@article{80-TrajectoryData,
+  title = {Trajectory {{Data Mining}}: {{An Overview}}},
+  author = {Zheng, Yu},
+  date = {2015-05-20},
+  journaltitle = {ACM Transactions on Intelligent Systems and Technology},
+  volume = {6},
+  number = {3},
+  pages = {1--41},
+  issn = {2157-6904, 2157-6912},
+  doi = {10.1145/2743025}
+}
+
+@article{81-DataMining,
+  title = {From {{Data Mining}} to {{Knowledge Discovery}} in {{Databases}}},
+  author = {Fayyad, Usama and Piatetsky-Shapiro, Gregory and Smyth, Padhraic},
+  pages = {18}
+}
+
+@article{82-BigTrajectory,
+  title = {Big {{Trajectory Data Mining}}: {{A Survey}} of {{Methods}}, {{Applications}}, and {{Services}}},
+  author = {Wang, Di and Miwa, Tomio and Morikawa, Takayuki},
+  date = {2020-08-14},
+  journaltitle = {Sensors (Basel, Switzerland)},
+  volume = {20},
+  number = {16},
+  eprint = {32824028},
+  pages = {4571},
+  issn = {1424-8220},
+  doi = {10.3390/s20164571},
+  pmcid = {PMC7472055}
+}
+
+@article{83-TimeSeries,
+  title = {Time Series Similarity Measures and Time Series Indexing (Abstract Only)},
+  author = {Gunopulos, Dimitrios and Das, Gautam},
+  date = {2001-05-01},
+  journaltitle = {ACM SIGMOD Record},
+  volume = {30},
+  number = {2},
+  pages = {624},
+  issn = {0163-5808},
+  doi = {10.1145/376284.375808}
+}
+
+@article{84-TimeseriesClusteringa,
+  title = {Time-Series Clustering – {{A}} Decade Review},
+  author = {Aghabozorgi, Saeed and Seyed Shirkhorshidi, Ali and Ying Wah, Teh},
+  date = {2015-10-01},
+  journaltitle = {Information Systems},
+  volume = {53},
+  pages = {16--38},
+  issn = {0306-4379},
+  doi = {10.1016/j.is.2015.04.007}
+}
+
+@article{85-VehicleTrajectory,
+  title = {Vehicle {{Trajectory Similarity}}: {{Models}}, {{Methods}}, and {{Applications}}},
+  author = {Sousa, Roniel S. De and Boukerche, Azzedine and Loureiro, Antonio A. F.},
+  date = {2020-09-28},
+  journaltitle = {ACM Computing Surveys},
+  volume = {53},
+  number = {5},
+  pages = {94:1--94:32},
+  issn = {0360-0300},
+  doi = {10.1145/3406096}
+}
+
+
+@article{86-ComputingMinimum,
+  title = {Computing the Minimum {{Hausdorff}} Distance between Two Point Sets on a Line under Translation},
+  author = {Rote, Günter},
+  date = {1991-05-17},
+  journaltitle = {Information Processing Letters},
+  volume = {38},
+  number = {3},
+  pages = {123--127},
+  issn = {0020-0190},
+  doi = {10.1016/0020-0190(91)90233-8}
+}
+
+
+@inproceedings{87-SublinearTime,
+  title = {A {{Sublinear Time Approximation Scheme}} for {{Clustering}} in {{Metric Spaces}}},
+  booktitle = {Proceedings of the 40th {{Annual Symposium}} on {{Foundations}} of {{Computer Science}}},
+  author = {Indyk, Piotr},
+  date = {1999-10-17},
+  series = {{{FOCS}} '99},
+  pages = {154},
+  publisher = {{IEEE Computer Society}},
+  isbn = {978-0-7695-0409-4}
+}
+
+@inproceedings{87-SublinearTime,
+  title = {A {{Sublinear Time Approximation Scheme}} for {{Clustering}} in {{Metric Spaces}}},
+  booktitle = {Proceedings of the 40th {{Annual Symposium}} on {{Foundations}} of {{Computer Science}}},
+  author = {Indyk, Piotr},
+  date = {1999-10-17},
+  series = {{{FOCS}} '99},
+  pages = {154},
+  publisher = {{IEEE Computer Society}},
+  isbn = {978-0-7695-0409-4}
+}
+
+@inproceedings{88-SetbasedSimilarity,
+  title = {Set-Based {{Similarity Search}} for {{Time Series}}},
+  booktitle = {Proceedings of the 2016 {{International Conference}} on {{Management}} of {{Data}}},
+  author = {Peng, Jinglin and Wang, Hongzhi and Li, Jianzhong and Gao, Hong},
+  date = {2016-06-26},
+  series = {{{SIGMOD}} '16},
+  pages = {2039--2052},
+  publisher = {{Association for Computing Machinery}},
+  doi = {10.1145/2882903.2882963},
+  isbn = {978-1-4503-3531-7}
+}
+
+
+@article{89-FinancialTimeseries,
+  title = {Financial {{Time-series Analysis}}: A {{Brief Overview}}},
+  author = {Chakraborti, A. and Patriarca, M. and Santhanam, M. S.},
+  date = {2007},
+  doi = {10.1007/978-88-470-0665-2_4}
+}
+
+@article{9-FastDTWAccurate,
+  title = {{{FastDTW}}: {{Toward Accurate Dynamic Time Warping}} in {{Linear Time}} and {{Space}}},
+  author = {Salvador, Stan and Chan, Philip},
+  pages = {11}
+}
+
+@article{90-InternationalGNSS,
+  title = {The {{International GNSS Service}} in a Changing Landscape of {{Global Navigation Satellite Systems}}},
+  author = {Dow, John M. and Neilan, R. E. and Rizos, C.},
+  date = {2009-03-01},
+  journaltitle = {Journal of Geodesy},
+  volume = {83},
+  number = {3},
+  pages = {191--198},
+  issn = {1432-1394},
+  doi = {10.1007/s00190-008-0300-3}
+}
+
+
+@article{91-EnhancedRepresentation,
+  title = {An {{Enhanced Representation}} of {{Time Series Which Allows Fast}} and {{Accurate Classification}}, {{Clustering}} and {{Relevance Feedback}}},
+  author = {Keogh, Eamonn J and Pazzani, Michael J},
+  pages = {9}
+}
+
+@inproceedings{92-TrajectoryIndexing,
+  title = {Trajectory {{Indexing}} and {{Retrieval}}},
+  booktitle = {Computing with {{Spatial Trajectories}}},
+  author = {Deng, K. and Xie, Kexin and Zheng, Kevin and Zhou, Xiaofang},
+  date = {2011},
+  doi = {10.1007/978-1-4614-1629-6_2}
+}
+
+
+
+
+
+
+
+
